Addition of ApiModel page

--- a/TapFitness.csproj
+++ b/TapFitness.csproj
@@ -36,6 +36,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\MainPageViewModel.cs" />
+    <Compile Include="Models\ExerciseItemModels.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="App.xaml">
