--- a/TapFitness.iOS/TapFitness.iOS.csproj
+++ b/TapFitness.iOS/TapFitness.iOS.csproj
@@ -143,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Images\iTunesArtwork%401x.png" />
+    <BundleResource Include="Resources\GokuImage.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.4.270\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.270\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
