added PlanPage based on choices and will select diff API use

--- a/TapFitness.csproj
+++ b/TapFitness.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Views\ApiKeys.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Helpers\Settings.cs" />
+    <Compile Include="Views\PlanPage.xaml.cs">
+      <DependentUpon>PlanPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\PlanPageViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="App.xaml">
@@ -74,6 +78,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\DataSummaryPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\PlanPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
