--- a/TapFitness.iOS/TapFitness.iOS.csproj
+++ b/TapFitness.iOS/TapFitness.iOS.csproj
@@ -155,6 +155,7 @@
     <BundleResource Include="Resources\Goal.jpg" />
     <BundleResource Include="Resources\active.png" />
     <BundleResource Include="Resources\summary.jpg" />
+    <BundleResource Include="Resources\letsdoit.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.4.270\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.270\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
