--- a/TapFitness.iOS/packages.config
+++ b/TapFitness.iOS/packages.config
@@ -4,8 +4,11 @@
   <package id="Prism.Core" version="6.3.0" targetFramework="xamarinios10" />
   <package id="Prism.Forms" version="6.3.0" targetFramework="xamarinios10" />
   <package id="Prism.Unity.Forms" version="6.3.0" targetFramework="xamarinios10" />
+  <package id="SkiaSharp" version="1.59.2" targetFramework="xamarinios10" />
+  <package id="SkiaSharp.Views" version="1.59.2" targetFramework="xamarinios10" />
+  <package id="SkiaSharp.Views.Forms" version="1.59.2" targetFramework="xamarinios10" />
   <package id="Unity" version="4.0.1" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.TextToSpeech" version="3.0.1" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.4.0.280" targetFramework="xamarinios10" />
 </packages>
