--- a/packages.config
+++ b/packages.config
@@ -8,8 +8,10 @@
   <package id="Prism.Core" version="6.3.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Prism.Forms" version="6.3.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Prism.Unity.Forms" version="6.3.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="SkiaSharp" version="1.59.2" targetFramework="portable45-net45+win8+wp8" />
+  <package id="SkiaSharp.Views.Forms" version="1.59.2" targetFramework="portable45-net45+win8+wp8" />
   <package id="Unity" version="4.0.1" targetFramework="portable45-net45+win8+wp8" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="portable45-net45+win8+wp8" />
   <package id="Xam.Plugins.TextToSpeech" version="3.0.1" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Xamarin.Forms" version="2.4.0.280" targetFramework="portable45-net45+win8+wp8" />
 </packages>
